# llguidance

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build-all.yml  c-ffi-tests.yml  json-schema-tests.yml  release.yml  rust.yml  wheels.yml
c_ffi_tests/: CMakeLists.txt
c_ffi_tests/src/: test_constraint.cpp  test_helpers.cpp  test_helpers.h  test_matcher.cpp  test_parallel.cpp  test_stop_controller.cpp  test_tokenize.cpp  test_tokenizer.cpp  test_validate_grammar.cpp  test_version.cpp
c_sample/: c_sample.cpp
docs/: json_schema.md  syntax.md  toolcalls.md
json_schema_test_suite/: Cargo.toml  expected_json_schema_test_suite.json
json_schema_test_suite/src/: main.rs
json_stats/: expected_maskbench.json
json_stats/src/: json_stats.rs  stats.rs
parser/: Cargo.toml  build.rs  cbindgen.toml  llguidance.h
parser/benches/: compute_mask.rs
parser/src/: api.rs  ffi.rs  grammar_builder.rs  lib.rs  matcher.rs  substring.rs  tokenparser.rs
parser/src/earley/: lexerspec.rs  parser.rs
parser/src/json/: applicator.rs  compiler.rs  mod.rs  numeric.rs  pre_schema.rs  schema.rs
parser/src/json/order/: keywords.rs  location.rs  mod.rs  schema.rs
parser/src/json/schema_2/: build.rs  mod.rs  preschema.rs  schema.rs
parser/src/lark/: ast.rs  compiler.rs  lexer.rs  parser.rs
parser/tests/: test_json_primitives.rs  test_ll.rs
python/: mypy.ini
python/llguidance/: _grammar_from.py  _lib.pyi  _schema.py  hf.py  llamacpp.py  mlx.py  numpy.py  torch.py
python/torch_tests/: test_llamacpp.py  test_matcher.py  test_python_output.py
python_ext/: Cargo.toml
python_ext/src/: llamatokenizer.rs  llinterpreter.rs  llmatcher.rs  parserlimits.rs  py.rs  pyjson.rs
rust/src/: py.rs
sample_parser/: Cargo.toml
sample_parser/tests/: expected_json_schema_test_suite.json  test_bias_cache.rs  test_json_primitives.rs  test_json_schema_test_suite.rs  test_json_x_guidance.rs  test_lark.rs  test_raw_parser.rs
sample_parser/tests/common_lark_utils/: mod.rs
scripts/: test-guidance.sh
toktrie/: Cargo.toml
toktrie/src/: toktree.rs
toktrie_hf_downloader/: Cargo.toml
toktrie_hf_tokenizers/: Cargo.toml
toktrie_hf_tokenizers/src/: lib.rs
toktrie_tiktoken/: Cargo.toml
