[workspace]
members = [
    "python_ext",
    "parser",
    "sample_parser",
    "json_stats",
    "toktrie",
    "toktrie_hf_tokenizers",
    "toktrie_hf_downloader",
    "toktrie_tiktoken",
]
# just exclude python_ext since it doesn't build without maturin
default-members = [
    "parser",
    "sample_parser",
    "json_stats",
    "toktrie",
    "toktrie_hf_tokenizers",
    "toktrie_hf_downloader",
    "toktrie_tiktoken",
]
resolver = "2"

[workspace.package]
rust-version="1.87"

[profile.release]
debug = 1
strip = "debuginfo"
# lto = "thin"
# codegen-units = 1

[profile.perf]
inherits = "release"
debug = 1
opt-level = 3

[patch.crates-io]
derivre = { git = "https://github.com/hudson-ai/derivre", rev = "6bb66d2182c5dbcf666a32b0ede8095b01db0ac9" }

[workspace.dependencies]
toktrie = { path = "toktrie" }
llguidance = { path = "parser" }
toktrie_hf_tokenizers = { path = "toktrie_hf_tokenizers" }
toktrie_hf_downloader = { path = "toktrie_hf_downloader" }
toktrie_tiktoken = { path = "toktrie_tiktoken" }
